--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 
     <title>Nike webpage</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
@@ -18,54 +24,72 @@
             alt=""
           />
         </div>
-        <div class="">
-          <img
-            class="img1"
-            src="https://static.stereogum.com/uploads/2016/11/Mura-Masa-Lovesick-video-1478186647.jpg"
-            alt=""
-          />
+        <div class="img2">
+          <img class="img1" src="./nike-ad (2).jpg" alt="" />
         </div>
         <div class="left-left-side">
           <h1>SNEAKER'S</h1>
           <div class="list-items">
             <ul>
-              <li>Lifestyle</li>
-              <li>Basketball</li>
+              <li id="lifestyle">Lifestyle <span class="number"></span></li>
+              <li id="basketball">Basketball <span class="number2"></span></li>
               <li>Football</li>
               <li>Training</li>
             </ul>
           </div>
-          <h1>Filter</h1>
+
           <div class="card">
+            <!-- <h1>Filter</h1> -->
             <div class="price-content">
-              <div>
+              <div class="card-data">
                 <label>Min</label>
-                <p id="min-value">$50</p>
+                <p id="min-value">$0</p>
               </div>
 
-              <div>
+              <div class="card-data2">
                 <label>Max</label>
-                <p id="max-value">$500</p>
+                <p id="max-value">$300</p>
               </div>
             </div>
 
             <div class="range-slider">
               <input
                 type="range"
-                class="min-price"
-                value="100"
-                min="10"
-                max="500"
-                step="10"
+                class="slider-input min-price"
+                value="0"
+                min="0"
+                max="350"
+                step="50"
+                id="min"
               />
               <input
                 type="range"
-                class="max-price"
-                value="250"
-                min="10"
-                max="500"
-                step="10"
+                class="slider-input max-price"
+                value="300"
+                min="0"
+                max="350"
+                step="50"
+                id="max"
               />
+            </div>
+          </div>
+
+          <div class="color-container">
+            <h1 class="color-h1">Colour</h1>
+            <div class="color-filter">
+              <button class="btn btn-1"></button>
+              <button class="btn btn-2"></button>
+              <button class="btn btn-3"></button>
+              <button class="btn btn-4"></button>
+              <button class="btn btn-5"></button>
+              <button class="btn btn-6"></button>
+              <button class="btn btn-7"></button>
+              <button class="btn btn-8"></button>
+              <button class="btn btn-9"></button>
+              <button class="btn btn-10"></button>
+              <button class="btn btn-11"></button>
+              <button class="btn btn-12"></button>
+              <button class="btn btn-13"></button>
             </div>
           </div>
         </div>
@@ -81,21 +105,53 @@
               <li><a href="#">Favorites</a></li>
             </ul>
           </nav>
-          <form action="/search" method="get">
-            <input type="text" name="q" placeholder="Search..." />
+          <form action="" method="#" class="search-form" id="search-form">
+            <i class="search-icon">
+              <svg
+                id="search-icon"
+                stroke="currentColor"
+                fill="none"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                height="1em"
+                width="1em"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="11" cy="11" r="8"></circle>
+                <line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg
+            ></i>
+            <input
+              type="text"
+              name="q"
+              id="searchInput"
+              class="svg-placeholder"
+              placeholder="Search"
+            />
           </form>
+
           <div class="nav-btn">
             <a class="btn1" href="#"> <button>1</button></a>
             <a class="btn2" href="#"> <button>2</button></a>
           </div>
         </header>
         <div class="left-side-2">
-          <h1 class="subtitle">LIFESTYLE SNEAKERS</h1>
+          <h1 class="subtitle" id="subtitle">LIFESTYLE SNEAKERS</h1>
           <div class="subtitle-btn">
-            <a class="btn3" href="#"> <button>3</button></a>
-            <a class="btn4" href="#"> <button>4</button></a>
+            <label for="sortOrder">Select Sort Order:</label>
+            <select id="sortOrder">
+              <option id="none" value="None">None</option>
+              <option id="lth" value="lowestToHighest">
+                Lowest to Highest
+              </option>
+              <option id="htl" value="highestToLowest">
+                Highest to Lowest
+              </option>
+            </select>
           </div>
         </div>
+        <div class="product-container" id="product-container"></div>
       </div>
     </div>
     <script src="script.js"></script>
