--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         <div class="product-container" id="product-container"></div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
+    <!-- <script type="module" src="./script2.js"></script> -->
   </body>
 </html>
